# sdl2-general

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Collision.cpp.5421C76045650448.idx  Collision.h.463A79AE38E31D35.idx  Entity.cpp.1078E7EC746F4ED2.idx  Entity.h.1959F25B94F307CC.idx  Game.cpp.65AD049283213C2B.idx  InputHandler.cpp.C6E80CDF15605681.idx  InputHandler.h.D24867BBB067040D.idx  Particle.cpp.1C4BA51B7E3C4FB2.idx  Particle.h.6B1F3DBE32CCA82C.idx  Spawner.cpp.7EF3022812F5456B.idx  Spawner.h.E6749276A4585E50.idx  main.cpp.139D05A912010E83.idx  main.cpp.2D854509F2722282.idx  main.cpp.5BB1CEF0E20C60FA.idx  main.cpp.AD202F39709A555B.idx  player.cpp.203809334FA28FD5.idx  player.cpp.4A0A555CCF165BD7.idx  player.h.09B9634EC5731B5A.idx
include/: Collision.h  Entity.h  Game.h  InputHandler.h  Particle.h  Spawner.h  player.h
src/: Collision.cpp  Entity.cpp  Game.cpp  InputHandler.cpp  Particle.cpp  Spawner.cpp  main.cpp  player.cpp
